force-app/main/default/objects/Distribution_Channel__c/Distribution_Channel__c.object-meta.xml
<CustomObject>
    <label>Distribution Channel</label>
    <nameField>
        <label>Di Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>