force-app/main/default/objects/Distribution_Channel__c/fields/Distribution_Channel_Description__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel_Description__c</fullName>
    <label>Distribution Channel Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>