force-app/main/default/objects/Distribution_Channel__c/fields/Division_Description__c.field-meta.xml
<CustomField>
    <fullName>Division_Description__c</fullName>
    <label>Division Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>