force-app/main/default/objects/Distribution_Channel__c/fields/Sales_Organization_Description__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization_Description__c</fullName>
    <label>Sales Organization Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>